<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/header"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:theme="@android:style/Theme.NoTitleBar" android:background="@drawable/background"
	android:layout_width="fill_parent" android:layout_height="fill_parent">

	<RelativeLayout android:id="@+id/header"
		android:layout_width="fill_parent" android:gravity="center_vertical"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:layout_alignParentTop="true" android:background="@drawable/topbar_logo">

	</RelativeLayout>


	<TextView android:id="@+id/faq" android:text="@string/FAQ"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:textColor="#28765B" android:layout_below="@+id/header" lay="10dip"
		android:layout_marginLeft="15dip" android:textSize="18dip"
		android:textStyle="bold" android:layout_marginTop="5dip" />


	<!-- <LinearLayout android:layout_marginTop="10dip" android:orientation="vertical" 
		android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingLeft="20dip" 
		android:paddingRight="20dip" android:background="@drawable/bg_repeat" android:layout_below="@id/faq" 
		android:paddingTop="10dip" android:paddingBottom="10dip"> -->


	<LinearLayout android:layout_marginTop="10dip"
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:paddingLeft="20dip"
		android:paddingRight="20dip" android:background="#000000"
		android:layout_below="@id/faq" android:paddingTop="10dip"
		android:paddingBottom="10dip">

		<LinearLayout android:layout_marginTop="5dip"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:paddingLeft="10dip"
			android:paddingRight="10dip" android:background="#ffffff"
			android:layout_below="@id/faq">



			<ScrollView android:layout_height="fill_parent"
				android:id="@+id/faqScrolll" android:layout_width="fill_parent"
				android:layout_marginBottom="10dip">

				<LinearLayout android:layout_width="fill_parent"
					android:orientation="vertical" android:layout_marginBottom="10dip"
					android:paddingLeft="10dip" android:layout_marginTop="5dip"
					android:layout_marginRight="5dip" android:id="@+id/editprofile"
					android:layout_height="wrap_content">

					<TextView android:text="@string/faq_ques_1"
						android:layout_width="wrap_content" android:id="@+id/question1"
						android:textStyle="bold" android:layout_height="wrap_content"
						android:layout_marginTop="30dip" android:textColor="#28765B"
						android:textSize="18dip"></TextView>
					<TextView android:text="@string/faq_ans_1"
						android:layout_width="wrap_content" android:id="@+id/answer1"
						android:layout_height="wrap_content" android:textColor="#000000"
						android:textSize="18dip"></TextView>
					<TextView android:text="@string/faq_ques_2"
						android:layout_width="wrap_content" android:id="@+id/question2"
						android:textStyle="bold" android:layout_height="wrap_content"
						android:layout_marginTop="30dip" android:textColor="#28765B"
						android:textSize="18dip"></TextView>
					<TextView android:text="@string/faq_ans_2"
						android:layout_width="wrap_content" android:id="@+id/answer2"
						android:layout_height="wrap_content" android:textColor="#000000"
						android:textSize="18dip"></TextView>
					<TextView android:text="@string/faq_ques_3"
						android:layout_width="wrap_content" android:id="@+id/question3"
						android:textStyle="bold" android:layout_height="wrap_content"
						android:layout_marginTop="30dip" android:textColor="#28765B"
						android:textSize="18dip"></TextView>
					<TextView android:text="@string/faq_ans_3"
						android:layout_width="wrap_content" android:id="@+id/answer3"
						android:layout_height="wrap_content" android:textColor="#000000"
						android:textSize="18dip"></TextView>
					<TextView android:text="@string/faq_ques_4"
						android:layout_width="wrap_content" android:id="@+id/question4"
						android:textStyle="bold" android:layout_height="wrap_content"
						android:layout_marginTop="30dip" android:textColor="#28765B"
						android:textSize="18dip"></TextView>
					<TextView android:text="@string/faq_ans_4"
						android:layout_width="wrap_content" android:id="@+id/answer4"
						android:layout_height="wrap_content" android:textColor="#000000"
						android:textSize="18dip"></TextView>
					<TextView android:text="@string/faq_ques_5"
						android:layout_width="wrap_content" android:id="@+id/question5"
						android:textStyle="bold" android:layout_height="wrap_content"
						android:layout_marginTop="30dip" android:textColor="#28765B"
						android:textSize="18dip"></TextView>
					<TextView android:text="@string/faq_ans_5_1"
						android:layout_width="wrap_content" android:id="@+id/answer5_1"
						android:layout_height="wrap_content" android:textColor="#000000"
						android:textSize="18dip"></TextView>
					<TextView android:text="@string/mail"
						android:layout_width="wrap_content" android:id="@+id/mail_1"
						android:layout_height="wrap_content" android:textColor="#000000"
						android:textSize="18dip"></TextView>
					<TextView android:text="@string/faq_ans_5_2"
						android:layout_width="wrap_content" android:id="@+id/answer5_2"
						android:layout_height="wrap_content" android:textColor="#000000"
						android:textSize="18dip"></TextView>
					<TextView android:text="@string/faq_ques_6"
						android:layout_width="wrap_content" android:id="@+id/question6"
						android:textStyle="bold" android:layout_height="wrap_content"
						android:layout_marginTop="30dip" android:textColor="#28765B"
						android:textSize="18dip"></TextView>
					<TextView android:text="@string/faq_ans_6"
						android:layout_width="wrap_content" android:id="@+id/answer6"
						android:layout_height="wrap_content" android:textColor="#000000"
						android:textSize="18dip"></TextView>
					<TextView android:text="@string/mail"
						android:layout_width="wrap_content" android:id="@+id/mail_2"
						android:layout_height="wrap_content" android:textColor="#000000"
						android:textSize="18dip"></TextView>
					<TextView android:text="@string/emptytext"
						android:layout_width="wrap_content" android:id="@+id/emptyText"
						android:layout_height="wrap_content" android:layout_marginTop="10dip"
						android:textColor="#000000"></TextView>
				</LinearLayout>
			</ScrollView>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>

