<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:theme="@android:style/Theme.NoTitleBar" android:background="@drawable/background"
	android:orientation="vertical">

	<RelativeLayout android:id="@+id/header"
		android:layout_width="fill_parent" android:gravity="center_vertical"
		android:layout_height="wrap_content" android:background="@drawable/topbar_blank"
		android:orientation="horizontal" android:layout_alignParentTop="true">

		<TextView android:id="@+id/headertext" android:text="@string/receiptPhotos"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_centerHorizontal="true" android:textColor="#ffffff"
			android:textSize="20dip" android:textStyle="bold" />


	</RelativeLayout>

	<ScrollView android:id="@+id/scroll" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_below="@+id/header"
		android:layout_centerHorizontal="true">


		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="fill_parent"
			android:paddingLeft="30dip" android:paddingRight="10dip"
			android:layout_below="@+id/header" android:gravity="center_horizontal">

			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content">

				<TextView android:id="@+id/placereceipt" android:text="@string/placeSurface"
					android:layout_marginTop="10dip" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textColor="#ffffff"
					android:textSize="17dip" android:textStyle="bold" />

				<TextView android:id="@+id/adequate" android:text="@string/adequate"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textStyle="bold" android:textColor="#ffffff"
					android:textSize="17dip" />

				<TextView android:id="@+id/textnoblury" android:text="@string/notBlury"
					android:textStyle="bold" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textColor="#ffffff"
					android:textSize="17dip" />

			</LinearLayout>

			<ImageView android:id="@+id/receippic" android:background="@drawable/example"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginTop="20dip" />

			<TextView android:id="@+id/faqTest" android:text="@string/needMoreHelp"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginTop="20dip" android:layout_marginLeft="10dip"
				android:textColor="#ffffff" android:textStyle="bold" />


		</LinearLayout>
	</ScrollView>
</RelativeLayout>
