<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:theme="@android:style/Theme.NoTitleBar"
	android:background="@drawable/background" android:layout_width="fill_parent"
	android:focusable="true" android:focusableInTouchMode="true"
	android:orientation="vertical">

	<ImageView android:id="@+id/headertext" android:src="@drawable/topbar_logo"
		android:layout_width="wrap_content" android:layout_height="wrap_content" />
	<ScrollView android:id="@+id/scroll" android:layout_below="@+id/headertext"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:fillViewport="true">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:id="@+id/Linear"
			android:orientation="vertical" android:padding="25dip" android:gravity="center_vertical">

			<TextView android:text="@string/enter_pc" android:textColor="#28765B"
				android:id="@+id/enteremail" 
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:textSize="17dip" />

			<TextView android:text="@string/case_sensitive"
				android:textColor="#ffffff" android:id="@+id/case_sensitive"
				android:layout_below="@+id/entermail" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:textSize="10dip" />

			<EditText android:id="@+id/promocode" android:layout_width="fill_parent"
				android:singleLine="true" android:layout_height="wrap_content"
				android:hint="@string/promocode_hint" android:layout_marginTop="10dip" />

			<Button android:id="@+id/crepe_me" android:layout_width="wrap_content"
				android:background="@drawable/send" android:layout_marginTop="7dip"
				android:layout_height="wrap_content" />

			<TextView android:text="@string/promocode_not_working"
				android:textColor="#ffffff" android:id="@+id/not_working" android:layout_gravity="center_horizontal"
				android:layout_below="@+id/entermail" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:textSize="10dip" android:layout_marginTop="30dip"/>

		</LinearLayout>
	</ScrollView>

</LinearLayout>
